# trying-to-forecast-stock-returns

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  feature.md  pyproject.toml  pyrightconfig.json
docs/: architecture.md  data-artifacts.md  feature-registry.md  launch-runbook.md  meta-model-research-contract.md  model-registry.md  portfolio-engine.md  testing-and-quality.md
tests/: conftest.py  test_runtime_parallelism.py
tests/accounting_feature_engineering/: test_main.py  test_sources.py
tests/broker_xtb/: test_costs.py  test_main.py  test_reference_snapshot.py  test_specs.py
tests/data/: test_registry.py
tests/deep_feature_engineering/: test_config.py
tests/evaluate/: test_dataset.py  test_main.py
tests/feature_corr_pca/: test_main.py
tests/feature_selection/: test_cache.py  test_io.py  test_main.py  test_objective.py  test_robust_selection.py  test_scoring.py  test_selection.py  test_selection_pipeline.py  test_wrapper_search.py
tests/features_engineering/: test_high_level_features.py  test_main.py
tests/launch/: test_main.py
tests/meta_labeling/: test_ablation.py  test_main.py  test_model.py  test_refinement.py
tests/meta_model/: test_research_metrics.py  test_split_guard.py
tests/model_registry/: test_main.py
tests/optimize_parameters/: test_acceleration.py  test_dataset.py  test_fold_context.py  test_fold_matrix_cache.py  test_main.py  test_metric_context.py  test_objective.py
tests/overfitting/: test_main.py
tests/portfolio_optimization/: test_main.py  test_solver.py  test_train_only.py
typings/fredapi/: __init__.pyi
(+165 files in other folders)
